--- a/ci-cd-tools/Jenkinsfile
+++ b/ci-cd-tools/Jenkinsfile
@@ -6,6 +6,11 @@ pipeline {
     }
 
     stages {
+        stage('Hello') {
+            steps {
+                echo 'Hello World'
+            }
+        }
         stage('Build') { 
             steps {
                 echo 'Explore Build Stage'
@@ -14,27 +19,27 @@ pipeline {
                 // bat "${TOOL_DIR}\\build.bat ${WORKSPACE}\\Release Release all"
             }
         }
-        stage('Static Code Analysis') {
-            steps {
-                catchError(buildResult: 'UNSTABLE', stageResult: 'FAILURE') {
-                    bat "\"${TOOL_DIR}\\static-analysis.bat\" \"${WORKSPACE}\\App\""
+        // stage('Static Code Analysis') {
+        //     steps {
+        //         catchError(buildResult: 'UNSTABLE', stageResult: 'FAILURE') {
+        //             bat "\"${TOOL_DIR}\\static-analysis.bat\" \"${WORKSPACE}\\App\""
                     
-                }
-            }
-        }
-        stage('Flash-Debug') { 
-            steps {
-                // bat "${TOOL_DIR}\\flash.bat $params.DUT_STLINK_sn ${WORKSPACE}\\Debug\\CICDBadweh.bin"
-                bat "\"${TOOL_DIR}\\flash.bat\" \"${params.DUT_STLINK_sn}\" \"${WORKSPACE}\\Debug\\CICDBadweh.bin\""
+        //         }
+        //     }
+        // }
+        // stage('Flash-Debug') { 
+        //     steps {
+        //         // bat "${TOOL_DIR}\\flash.bat $params.DUT_STLINK_sn ${WORKSPACE}\\Debug\\CICDBadweh.bin"
+        //         bat "\"${TOOL_DIR}\\flash.bat\" \"${params.DUT_STLINK_sn}\" \"${WORKSPACE}\\Debug\\CICDBadweh.bin\""
 
-            }
-        }
+        //     }
+        // }
 
-        stage('Debug Variables') {
-            steps { 
-                bat "echo BUILD_TAG=${BUILD_TAG}"
-            }
-        }
+        // stage('Debug Variables') {
+        //     steps { 
+        //         bat "echo BUILD_TAG=${BUILD_TAG}"
+        //     }
+        // }
 
         // stage('Test-Release') { 
         //     steps {
@@ -43,15 +48,15 @@ pipeline {
         //         bat "${TOOL_DIR}\\check-test-results.bat test-results-release.xml"
         //     }
         // }
-        stage('Test-Release') { 
-            steps {
-                bat "python \"${TOOL_DIR}\\base-hilt.py\" --dut-serial=${params.DUT_console} --sim-serial=none --tver=\"${BUILD_TAG}-Release\" --jfile=\"test-results-release.xml\""
-                junit 'test-results-release.xml'
+        // stage('Test-Release') { 
+        //     steps {
+        //         bat "python \"${TOOL_DIR}\\base-hilt.py\" --dut-serial=${params.DUT_console} --sim-serial=none --tver=\"${BUILD_TAG}-Release\" --jfile=\"test-results-release.xml\""
+        //         junit 'test-results-release.xml'
 
 
 
-            }
-        }
+        //     }
+        // }
        
 
     }
