--- a/ci-cd-tools/Jenkinsfile
+++ b/ci-cd-tools/Jenkinsfile
@@ -51,15 +51,13 @@ pipeline {
         //         junit 'test-results-release.xml'
         //         bat "${TOOL_DIR}\\check-test-results.bat test-results-release.xml"
         //     }
-        // }
-        // stage('Test-Release') { 
-        //     steps {
-        //         bat "python \"${TOOL_DIR}\\base-hilt.py\" --dut-serial=${params.DUT_console} --sim-serial=none --tver=\"${BUILD_TAG}-Release\" --jfile=\"test-results-release.xml\""
-        //         junit 'test-results-release.xml'
-
-
-
-        //     }
+        }
+        stage('Test-Release') { 
+            steps {
+                // bat "python \"${TOOL_DIR}\\base-hilt.py\" --dut-serial=${params.DUT_console} --sim-serial=none --tver=\"${BUILD_TAG}-Release\" --jfile=\"test-results-release.xml\""
+                bat "python \"${TOOL_DIR}\\base-hilt.py""
+                // junit 'test-results-release.xml'
+            }
         // }
        
 
