--- a/ci-cd-tools/Jenkinsfile
+++ b/ci-cd-tools/Jenkinsfile
@@ -52,13 +52,19 @@ pipeline {
         //         bat "${TOOL_DIR}\\check-test-results.bat test-results-release.xml"
         //     }
         }
+        // gpio test
+        // stage('Test-Release') { 
+        //     steps {
+        //         bat "python \"${TOOL_DIR}\\base-hilt.py\" --dut-serial=${params.DUT_console} --sim-serial=none --tver=\"${BUILD_TAG}-Release\" --jfile=\"test-results-release.xml\""
+        //         junit 'test-results-release.xml'
+        //     }
+        // }
+        // test
         stage('Test-Release') { 
             steps {
-                // bat "python \"${TOOL_DIR}\\base-hilt.py\" --dut-serial=${params.DUT_console} --sim-serial=none --tver=\"${BUILD_TAG}-Release\" --jfile=\"test-results-release.xml\""
-                bat "python \"${TOOL_DIR}\\base-hilt.py""
-                // junit 'test-results-release.xml'
-            }
-        // }
+                bat "python \"${TOOL_DIR}\\tmphm_serial_interface.py\""       
+                }
+        }
        
 
     }
