--- a/ci-cd-tools/Jenkinsfile
+++ b/ci-cd-tools/Jenkinsfile
@@ -62,7 +62,7 @@ pipeline {
         // gpio test
         stage('Test-Release') { 
             steps {
-                bat "python \"${TOOL_DIR}\\tmphm_serial_interface.py\"
+                bat "python \"${TOOL_DIR}\\tmphm_serial_interface.py\""
             }
         }
        
