modify Jenkin for tmphm HIL for serial test, Integration + System, and Unit test

--- a/ci-cd-tools/Jenkinsfile
+++ b/ci-cd-tools/Jenkinsfile
@@ -58,7 +58,7 @@ pipeline {
             steps {
                 bat "python \"${TOOL_DIR}\\tmphm_serial_interface.py\"" // test hardware interface
                 bat "python \"${TOOL_DIR}\\test_tmphm_serial.py\""   // test Integration and System HIL
-                // bat "python \"${TOOL_DIR}\\test_tmphm_age_reset.py\""
+                bat "python \"${TOOL_DIR}\\test_tmphm_age_reset.py\"" // Unit Test for Age Reset
             }
         }
        
