modify Jenkin for tmphm HIL for serial test, Integration + System, and Unit test

--- a/ci-cd-tools/Jenkinsfile
+++ b/ci-cd-tools/Jenkinsfile
@@ -53,7 +53,7 @@ pipeline {
         //     }
         // }
   
-        // gpio test
+        // tmphm test
         stage('Test-Release') { 
             steps {
                 bat "python \"${TOOL_DIR}\\tmphm_serial_interface.py\"" // test hardware interface
